Signed-off-by: ancymathew <ancy@hummingsoft.com.my>

--- a/assets/templates/sys_train_manufacturing_progress_table.html
+++ b/assets/templates/sys_train_manufacturing_progress_table.html
@@ -68,10 +68,10 @@
 											<td>Production completed / Rolled-out</td>
 										</tr>
 										<tr>
-											<td><div style="background:#f0c; width:20px; height:20px; margin:10px; border: 1px solid #000"></div></td>
-											<td>Assembly Completed</td>
 											<td><div style="background:#f06; width:20px; height:20px; margin:10px; border: 1px solid #000"></div></td>
-											<td>Pending from Puzhen / Car formation numbering unknown</td>
+											<td>Delayed against schedule / Pending Roll-out</td>
+											<!--<td><div style="background:#f06; width:20px; height:20px; margin:10px; border: 1px solid #000"></div></td>
+											<td>Pending from Puzhen / Car formation numbering unknown</td>-->
 										</tr>
 									</tbody>
 								</table>
