Signed-off-by: ancymathew <ancy@hummingsoft.com.my>

--- a/assets/templates/sys_train_manufacturing_progress_table.html
+++ b/assets/templates/sys_train_manufacturing_progress_table.html
@@ -87,7 +87,7 @@
 						</div>
                         <!--Added by Sebin-->
                         <div style="max-width: 500px; margin: auto; padding:20px;">
-                            <a class="assembly-link" href="#modal_comment" data-toggle="modal" style="font-weight:bold">Add comments <i class="loadpage fa fa-comments"></i></a>
+                            <a id="id_comments" class="assembly-link" href="#modal_comment" data-toggle="modal" style="font-weight:bold">Add comments <i class="loadpage fa fa-comments"></i></a>
                         </div>
                         <div class="comment-container summersoft_container" style="max-width: 500px; text-align: center; margin: auto;">
                         </div>
