--- a/assets/templates/slider.html
+++ b/assets/templates/slider.html
@@ -1,16 +1,51 @@
 <div class="header bg-dot30">
     <!--img src="/mpxd/assets/img/icons/line_chart-26.png" style="float: left;margin-right: 13px;"-->
     <% if (typeof(data.data.date) !== "undefined") { %>
-		<h2><%=data.title%></h2> <h2 class="asof">(As of <%=data.data.date%>)</h2>
-	<% } else {%>
-		<h2><%=data.title%></h2>
-	<% } %>
+    <h2><%=data.title%></h2>
+
+    <h2 class="asof">(As of <%=data.data.date%>)</h2>
+    <% } else {%>
+    <h2><%=data.title%></h2>
+    <% } %>
     <i class="header-icon fa fa-file-image-o"></i>
 </div>
 <div class="content" style="background: none;/*#1d2a34*/">
     <!--h2>Header h2</h2-->
+    <!--<div style="position: relative; width: 70%;margin: auto" id="slider_<%=data.id%>">-->
+        <!--<h4 style="position: absolute; right: 10px; top: 10px; z-index: 999;background: rgba(0, 0, 0, 0.6);padding: 5px;">-->
+            <!--<a style="color: #9EDD2E" href="javascript:void(0);" onclick="loadPage('<%=currentSlug%>/gallery')">Visit-->
+                <!--gallery <i class="fa fa-picture-o"></i></a></h4>-->
 
-    <div style="position: relative; width: 70%;margin: auto" id="slider_<%=data.id%>">
-	<h4 style="position: absolute; right: 10px; top: 10px; z-index: 999;background: rgba(0, 0, 0, 0.6);padding: 5px;"><a style="color: #9EDD2E" href="javascript:void(0);" onclick="loadPage('<%=currentSlug%>/gallery')">Visit gallery <i class="fa fa-picture-o"></i></a></h4>
-    </div>	
+        <div id="sliderFrame">
+            <h4 style="position: absolute; right: 25px; top: 10px; z-index: 999;background: rgba(0, 0, 0, 0.6);padding: 5px;">
+            <!--<h4 style="position: absolute; right: 25px; top: 10px; z-index: 999;background: transparent;padding: 5px;">-->
+                <a style="color: #9EDD2E" href="javascript:void(0);" onclick="loadPage('<%=currentSlug%>/gallery')">Visit
+                    gallery <i class="fa fa-picture-o"></i></a></h4>
+            <div id="slider">
+                <!--<img src='http://localhost/mpxd/assets/templates/butterfly.jpg' alt='Depot 1 - 23-January-16 to 29-January-16'/>-->
+                <!--<img src='http://localhost/mpxd/assets/templates/city.jpg' alt='Depot 1 - 23-January-16 to 29-January-16'/>-->
+                <!--<img src='http://localhost/mpxd/assets/templates/desert.jpg' alt='Depot 1 - 23-January-16 to 29-January-16'/>-->
+                <!--<img src='http://localhost/mpxd/assets/templates/flower.jpg' alt='Depot 1 - 23-January-16 to 29-January-16'/>-->
+            </div>
+        </div>
+
+    <!--<div class="aslider" id="asli" data-duration="10">-->
+        <!--<div class="aslide" data-duration="1">-->
+            <!--<img src="C:\wamp\www\mpxd\assets\templates\desert.jpg" alt="" height="200px" />-->
+            <!--<div class="text">HELLO</div>-->
+        <!--</div>-->
+        <!--<div class="aslide" data-duration="1">-->
+            <!--<img src="city.jpg" alt="" height="200px" />-->
+            <!--<div class="text">THIS</div>-->
+        <!--</div>-->
+        <!--<div class="aslide" data-duration="1">-->
+            <!--<img src="C:\wamp\www\mpxd\assets\templates\desert.jpg" alt="" height="200px" />-->
+            <!--<div class="text">IS SOME</div>-->
+        <!--</div>-->
+        <!--<div class="aslide" data-duration="1">-->
+            <!--<img src="flower.jpg" alt="" height="200px" />-->
+            <!--<div class="text">CAPTION TEXT</div>-->
+        <!--</div>-->
+    <!--</div>-->
+
 </div>
