Pier template label fixes

--- a/assets/templates/double_pier_view.html
+++ b/assets/templates/double_pier_view.html
@@ -440,7 +440,7 @@
            y="370.85068"
            x="1201.6638"
            id="tspan5409-4-8"
-           sodipodi:role="line">Last Week</tspan></text>
+           sodipodi:role="line">Previous</tspan></text>
     </g>
     <g
        id="g3370"
@@ -762,7 +762,7 @@
            y="466.85068"
            x="1349.6638"
            id="tspan5409-4-8-7"
-           sodipodi:role="line">Last Week</tspan></text>
+           sodipodi:role="line">Previous</tspan></text>
     </g>
     <g
        id="g3668"
