--- a/assets/templates/single_pier_view.html
+++ b/assets/templates/single_pier_view.html
@@ -457,7 +457,7 @@
          id="tspan5409-4-8"
          x="1001.6639"
          y="370.85068"
-         style="font-size:32px;fill:#ffffff;fill-opacity:1">Last Week</tspan></text>
+         style="font-size:32px;fill:#ffffff;fill-opacity:1">Previous</tspan></text>
   </g>
 </svg>  
 </div>
