--- a/assets/templates/progress.html
+++ b/assets/templates/progress.html
@@ -8,6 +8,67 @@
     <i class="header-icon fa fa-line-chart"></i>
 </div>
 <div class="content" style="background: none;/*#1d2a34*/ ">
-	<!--div style="text-align: center;font-weight: bold; font-size:60px;"><%=data.data.currentActual%></div-->
-	<div style="height: 90%;" id="chart_<%=data.id%>">></div>
+    <style>
+        div.aaaa > div {
+            height: 200px;
+        }
+        .trndup  {
+            fill: #00b050;
+            fill-opacity: 1;
+            fill-rule: nonzero;
+            stroke: none;
+        }
+        .trnddwn {
+            fill: #FF0000;
+            fill-opacity: 1;
+            fill-rule: nonzero;
+            stroke: none;
+        }
+    </style>
+    <div class="col-xs-3">
+        <div style="margin-left: 0" class="row util-padtop10">
+
+            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Early</div></div>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d1"><%=data.data.currentEarly%></div></div>
+
+        </div>
+
+        <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Late</div></div>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d3"><%=data.data.currentLate%></div></div>
+
+        </div>
+        <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Actual</div></div>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-red excel-d2"><%=data.data.currentActual%></div></div>
+
+        </div>
+        <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Early</div></div>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d4"><%=data.data.varEarly%></div></div>
+
+        </div>
+        <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Late</div></div>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d5"><%=data.data.varLate%></div></div>
+
+        </div>
+        <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Trend</div></div><!-- something wrong with the newer jQuery with contents(). returns empty array -->
+            <%if((data.data.trend == "up")){%>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object onload="a = $(this);$(this).contents().find('#path14').css('fill', '#00B050')" type="image/svg+xml" class="svg-arrow-down" data="<%=baseURL%>assets/img/uparrow_20x20.svg"></object></div></div>
+            <%}else{%>
+            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object onload="a = $(this);$(this).contents().find('#path14').css('fill', '#FF0000')" type="image/svg+xml" class="svg-arrow-down" data="<%=baseURL%>assets/img/downarrow_20x20.svg"></object></div></div>
+            <%}%>
+        </div>
+
+    </div>
+    <!--div style="text-align: center;font-weight: bold; font-size:60px;"><%=data.data.currentActual%></div-->
+    <!--<div class="col-xs-9"><div style="height: 90%;" id="chart_<%=data.id%>">></div></div>-->
+    <div class="aaaa col-xs-9" style="padding-top: 10px;vertical-align: top"><div id="chart_<%=data.id%>"></div></div>​
 </div>
