--- a/assets/templates/progress.html
+++ b/assets/templates/progress.html
@@ -25,49 +25,49 @@
             stroke: none;
         }
     </style>
-    <div class="col-xs-6">
-        <div style="margin-left: 0" class="row util-padtop10">
+    <!--<div class="col-xs-6">-->
+        <!--<div style="margin-left: 0" class="row util-padtop10">-->
 
-            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Early</div></div>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d1"><%=data.data.currentEarly%></div></div>
+            <!--<div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Early</div></div>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d1"><%=data.data.currentEarly%></div></div>-->
 
-        </div>
+        <!--</div>-->
 
-        <div style="margin-left: 0" class="row" style="padding-top:2px">
+        <!--<div style="margin-left: 0" class="row" style="padding-top:2px">-->
 
-            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Late</div></div>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d3"><%=data.data.currentLate%></div></div>
+            <!--<div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Late</div></div>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d3"><%=data.data.currentLate%></div></div>-->
 
-        </div>
-        <div style="margin-left: 0" class="row" style="padding-top:2px">
+        <!--</div>-->
+        <!--<div style="margin-left: 0" class="row" style="padding-top:2px">-->
 
-            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Actual</div></div>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-red excel-d2"><%=data.data.currentActual%></div></div>
+            <!--<div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Actual</div></div>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-red excel-d2"><%=data.data.currentActual%></div></div>-->
 
-        </div>
-        <div style="margin-left: 0" class="row" style="padding-top:2px">
+        <!--</div>-->
+        <!--<div style="margin-left: 0" class="row" style="padding-top:2px">-->
 
-            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Early</div></div>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d4"><%=data.data.varEarly%></div></div>
+            <!--<div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Early</div></div>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d4"><%=data.data.varEarly%></div></div>-->
 
-        </div>
-        <div style="margin-left: 0" class="row" style="padding-top:2px">
+        <!--</div>-->
+        <!--<div style="margin-left: 0" class="row" style="padding-top:2px">-->
 
-            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Late</div></div>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d5"><%=data.data.varLate%></div></div>
+            <!--<div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Late</div></div>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d5"><%=data.data.varLate%></div></div>-->
 
-        </div>
-        <div style="margin-left: 0" class="row" style="padding-top:2px">
+        <!--</div>-->
+        <!--<div style="margin-left: 0" class="row" style="padding-top:2px">-->
 
-            <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Trend</div></div><!-- something wrong with the newer jQuery with contents(). returns empty array -->
-            <%if((data.data.trend == "up")){%>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object onload="a = $(this);$(this).contents().find('#path14').css('fill', '#00B050')" type="image/svg+xml" class="svg-arrow-down" data="<%=baseURL%>assets/img/uparrow_20x20.svg"></object></div></div>
-            <%}else{%>
-            <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object onload="a = $(this);$(this).contents().find('#path14').css('fill', '#FF0000')" type="image/svg+xml" class="svg-arrow-down" data="<%=baseURL%>assets/img/downarrow_20x20.svg"></object></div></div>
-            <%}%>
-        </div>
+            <!--<div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Trend</div></div>&lt;!&ndash; something wrong with the newer jQuery with contents(). returns empty array &ndash;&gt;-->
+            <!--<%if((data.data.trend == "up")){%>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object onload="a = $(this);$(this).contents().find('#path14').css('fill', '#00B050')" type="image/svg+xml" class="svg-arrow-down" data="<%=baseURL%>assets/img/uparrow_20x20.svg"></object></div></div>-->
+            <!--<%}else{%>-->
+            <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object onload="a = $(this);$(this).contents().find('#path14').css('fill', '#FF0000')" type="image/svg+xml" class="svg-arrow-down" data="<%=baseURL%>assets/img/downarrow_20x20.svg"></object></div></div>-->
+            <!--<%}%>-->
+        <!--</div>-->
 
-    </div>
+    <!--</div>-->
     <!--div style="text-align: center;font-weight: bold; font-size:60px;"><%=data.data.currentActual%></div-->
     <!--<div class="col-xs-9"><div style="height: 90%;" id="chart_<%=data.id%>">></div></div>-->
     <div class="aaaa col-xs-6" style="padding-top: 10px;vertical-align: top"><div id="chart_<%=data.id%>"></div></div>​
