--- a/assets/templates/scurve-2.html
+++ b/assets/templates/scurve-2.html
@@ -11,7 +11,54 @@
     <div class="container">
 
         <div class="row" style="background: #222; color: #000">
-            <div class="col-xs-12"><div class="chart chart-scurve2" id="chart_<%=data.id%>"></div>
+            <div class="col-xs-3">
+                <div style="margin-left: 0" class="row util-padtop10">
+
+                    <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Early</div></div>
+                    <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d1"><%=data.currentEarly%></div></div>-->
+                    <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d1"></div></div>
+
+                </div>
+
+                <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+                    <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Late</div></div>
+                    <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d3"><%=data.currentLate%></div></div>-->
+                    <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d3"></div></div>
+
+                </div>
+                <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+                    <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Actual</div></div>
+                    <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-red excel-d2"><%=data.currentActual%></div></div>-->
+                    <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-red excel-d2"></div></div>
+
+                </div>
+                <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+                    <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Early</div></div>
+                    <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d4"><%=data.varEarly%></div></div>-->
+                    <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-green excel-d4"></div></div>
+
+                </div>
+                <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+                    <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Var Late</div></div>
+                    <!--<div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d5"><%=data.varLate%></div></div>-->
+                    <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right scurve-background-blue excel-d5"></div></div>
+
+                </div>
+                <div style="margin-left: 0" class="row" style="padding-top:2px">
+
+                    <div class="col-xs-7" style="padding-right:0px"><div class="scurve-2-item scurve-2-item-left">Trend</div></div><!-- something wrong with the newer jQuery with contents(). returns empty array -->
+
+                    <div class="col-xs-5" style="padding-left:5px"><div class="scurve-2-item scurve-2-item-right"><object data="<%=baseURL%>assets/img/<%=data.arrowDirection%>arrow_20x20.svg" class="svg-arrow-down" type="image/svg+xml" onLoad="a = $(this);
+                                $(this).contents().find('#path14').css('fill', '<%=data.trendColor%>')"></object></div></div>
+
+                </div>
+
+            </div>
+            <div class="col-xs-9"><div class="chart chart-scurve2" id="chart_<%=data.id%>"></div>
             </div>		
         </div>		
     </div>
