Signed-off-by: agailevictor for removing the dummy data <agailevictor@gmail.com>

--- a/assets/templates/scurve-2.html
+++ b/assets/templates/scurve-2.html
@@ -58,8 +58,9 @@
                 </div>
 
             </div>
+            <!--<div class="col-xs-9"><div class="chart chart-scurve2" id="chart_<%=data.id%>"></div>-->
             <div class="col-xs-9"><div class="chart chart-scurve2" id="chart_<%=data.id%>"></div>
-            </div>		
+            </div>
         </div>		
     </div>
 </div>
