Signed-off-by: agailevictor <agailevictor@gmail.com>

--- a/assets/templates/sys_train_manufacturing_progress_table.html
+++ b/assets/templates/sys_train_manufacturing_progress_table.html
@@ -20,7 +20,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-				<h4 class="modal-title">Manufacturing Progress</h4>
+				<h4 class="modal-title">XXX</h4>
 			</div>
 			<div class="modal-body clearfix" style="padding:0; background: #222; overflow:hidden">
 			<div style="position: absolute; left: 5px; top: 5px; z-index: 1;">
@@ -48,7 +48,7 @@
 				</div>-->
 				<div style="display:table">
 				<div class="train-box-header">
-					<div class="header-container"><h2>Puzhen Manufacturing Progress</h2></div>
+					<div class="header-container"><h2>XXX</h2></div>
 					<div class="manufacturing-container">
 						<!--<div class="train-container" style="height: 1000px; overflow: scroll;overflow-x: hidden;">-->
 						<div class="train-container summersoft_scroll">
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 				<div class="train-box-header">
-					<div class="header-container"><h2>SMH Rail Assembly Progress</h2></div>
+					<div class="header-container"><h2>XXX</h2></div>
 					<div class="assembly-container">
 						<div class="train-container summersoft_scroll">
 						</div>
@@ -96,7 +96,7 @@
 					</div>
 				</div>
 				<div class="train-box-header">
-					<div class="header-container"><h2>SUBD Dynamic Testing & Commissioning Status</h2></div>
+					<div class="header-container"><h2>XXX</h2></div>
 					<div class="subd-container">
 						<div class="train-container summersoft_scroll">
 						</div>
@@ -106,7 +106,7 @@
 				</div>
 				
 				<div class="train-box-header">
-					<div class="header-container"><h2>KJD</h2></div>
+					<div class="header-container"><h2>XXX</h2></div>
 					<div class="kjd-container">
 						<div class="train-container summersoft_scroll">
 						</div>
@@ -324,10 +324,10 @@
 	
 	<table class="table table-bordered table-condensed table-hover" style="">
 	<thead>
-	<th style="color: #ffd461;">CRRC, Puzhen</th>
-	<th style="color: #ffd461;">SMH Rail, Rasa</th>
-	<th style="color: #ffd461;">SUBD</th>
-	<th style="color: #ffd461;">KJD</th>
+	<th style="color: #ffd461;">XXX</th>
+	<th style="color: #ffd461;">XXX</th>
+	<th style="color: #ffd461;">SERDANG</th>
+	<th style="color: #ffd461;">SG BULOH</th>
 	</thead>
 	 <tr>
 		<td style=""><span id="manufacturing_progress_value"></span><br/><span id="manufacturing_number_of_trains"></span>  <br/><br/><a class="manufacturing-link" href="#modal_default_3" data-toggle="modal" style="font-weight:bold">View manufacturing progress <i class="loadpage fa fa-link"></i></a></td>
