Signed-off-by: agailevictor <agailevictor@gmail.com>

--- a/assets/templates/sys_train_head_progress.html
+++ b/assets/templates/sys_train_head_progress.html
@@ -12,7 +12,9 @@
 	<div style="text-align: center;">
 	<div style="max-width: 300px; max-height: 300px; margin-left: auto; margin-right: auto; margin-bottom: 25px;" id="chart_<%=data.id%>_progress"></div>
 	<!--<h4 class="color-beige" style="padding-left: 15px">Actual train completion: <span style="color: #9EDD2E">6.90%</span></h4>-->
-	<h4 class="color-beige total_progress" style="padding-left: 15px">Actual <span class="g_package"></span> Package Progress: <span style="color: #9EDD2E"><%=data.data.currentActual%></span></h4>
+	<!--<h4 class="color-beige total_progress" style="padding-left: 15px">Actual <span class="g_package"></span> Package Progress: <span style="color: #9EDD2E"><%=data.data.currentActual%></span></h4>-->
+	<!--Modified by agaile for removing the dummy data-->
+        <h4 class="color-beige total_progress" style="padding-left: 15px">Actual <span class="g_package"></span> Package Progress: <span style="color: #9EDD2E"></span></h4>
 	<div id="train_progress_container" style="margin-bottom: 25px;">
 	</div>
     <input type="hidden" id="perc">
