Signed-off-by: agailevictor <agailevictor@gmail.com>

--- a/assets/templates/gallery.html
+++ b/assets/templates/gallery.html
@@ -7,5 +7,7 @@
 <div class="content" style="background: none;/*#1d2a34*/">
 	<!--h2>Header h2</h2-->
 	
-	<div id="nanoGallery2" style="width: 90%"></div>
+	<!--<div id="nanoGallery2" style="width: 90%"></div>-->
+    <!--Modified by agaile to remove dummy data : 04/07/2016-->
+	<div id="nanoGallery" style="width: 90%"></div>
 </div>
