--- a/assets/templates/slider.html
+++ b/assets/templates/slider.html
@@ -19,7 +19,9 @@
         <div id="sliderFrame">
             <h4 style="position: absolute; right: 25px; top: 10px; z-index: 999;background: rgba(0, 0, 0, 0.6);padding: 5px;">
             <!--<h4 style="position: absolute; right: 25px; top: 10px; z-index: 999;background: transparent;padding: 5px;">-->
-                <a style="color: #9EDD2E" href="javascript:void(0);" onclick="loadPage('<%=currentSlug%>/gallery')">Visit
+                <!--<a style="color: #9EDD2E" href="javascript:void(0);" onclick="loadPage('<%=currentSlug%>/gallery')">Visit-->
+                    <!--gallery <i class="fa fa-picture-o"></i></a></h4>-->
+            <a style="color: #9EDD2E" href="#">Visit
                     gallery <i class="fa fa-picture-o"></i></a></h4>
             <div id="slider">
                 <!--<img src='http://localhost/mpxd/assets/templates/butterfly.jpg' alt='Depot 1 - 23-January-16 to 29-January-16'/>-->
